@@ -1,3 +1,14 @@
+2006-03-22  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/measure_dynamics.c (igraph_measure_dynamics_id)
+	(igraph_measure_dynamics_id_st) : added
+
+	* src/measure_dynamics.c (igraph_measure_dynamics_idage) : start_vertex
+	argument added
+
+	* src/measure_dynamics.c (igraph_measure_dynamics_idage) : double free
+	bug corrected
+
 2006-03-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* debian/rules : added interrupt.h to Debian package
